Fix note text overflow

--- a/pkms-frontend/src/index.css
+++ b/pkms-frontend/src/index.css
@@ -14,6 +14,7 @@
   background-color: lightgray;
   border-radius: 2px;
   padding: 10px;
+  overflow-wrap: anywhere;
 }
 
 .tags {
